Update links after renaming the repo

--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -14,12 +14,12 @@ releases:
       - Handle NoneType error when accessing service system info in vmware_host_service_info
         module (https://github.com/ansible/ansible/issues/67615).
       - Handle list items in vSphere schema while handling facts using to_json API
-        (https://github.com/ansible-collections/vmware/issues/33).
+        (https://github.com/ansible-collections/community.vmware/issues/33).
       - Handle multiple tags name with different category id in vmware_tag module
         (https://github.com/ansible/ansible/issues/66340).
       - Handle slashes in VMware network name (https://github.com/ansible/ansible/issues/64399).
       - In inventory plugin, serialize properties user specifies which are objects
-        as dicts (https://github.com/ansible-collections/vmware/pull/58).
+        as dicts (https://github.com/ansible-collections/community.vmware/pull/58).
       - In vmware_guest_network module use appropriate network while creating or reconfiguring
         (https://github.com/ansible/ansible/issues/65968).
       - Made vmnics attributes optional when creating DVS as they are optional on
@@ -34,7 +34,7 @@ releases:
         disk using the vmware_guest_disk module
       - vmware - Ensure we can use the modules with Python < 2.7.9 or RHEL/CentOS
         < 7.4, this as soon as ``validate_certs`` is disabled.
-      - vmware_category - fix associable datatypes (https://github.com/ansible-collections/vmware/issues/197).
+      - vmware_category - fix associable datatypes (https://github.com/ansible-collections/community.vmware/issues/197).
       - vmware_content_deploy_template - Added param content_library to the main function
       - vmware_deploy_ovf - Fixed ova deploy error occur if vm exists
       - vmware_dvs_portgroup - Implemented configuration changes on an existing Distributed
@@ -49,7 +49,7 @@ releases:
         in pyvmomi 7.0 and later
       - vmware_host_capability_info - Fixed vSphere API legacy version errors occur
         in pyvmomi 7.0 and later
-      - vmware_host_facts - handle facts when ESXi hostsystem is poweredoff (https://github.com/ansible-collections/vmware/issues/183).
+      - vmware_host_facts - handle facts when ESXi hostsystem is poweredoff (https://github.com/ansible-collections/community.vmware/issues/183).
       - vmware_host_firewall_manager - Ensure we can set rule with no ``allowed_hosts``
         key (https://github.com/ansible/ansible/issues/61332)
       - vmware_host_firewall_manager - Fixed creating IP specific firewall rules with
@@ -69,7 +69,7 @@ releases:
       minor_changes:
       - A `vmware` module_defaults group has been added to simplify parameters for
         multiple VMware tasks. This group includes all VMware modules.
-      - Add a flag 'force_upgrade' to force VMware tools upgrade installation (https://github.com/ansible-collections/vmware/issues/75).
+      - Add a flag 'force_upgrade' to force VMware tools upgrade installation (https://github.com/ansible-collections/community.vmware/issues/75).
       - Add powerstates to match vmware_guest_powerstate module with vmware_guest
         (https://github.com/ansible/ansible/issues/55653).
       - Added a timeout parameter `wait_for_ip_address_timeout` for `wait_for_ip_address`
@@ -87,7 +87,7 @@ releases:
       - Return additional information about hosts inside the cluster using vmware_cluster_info.
       - Update Module examples with FQCN.
       - Update README.md for installing any third party required Python libraries
-        using pip (https://github.com/ansible-collections/vmware/issues/154).
+        using pip (https://github.com/ansible-collections/community.vmware/issues/154).
       - add storage_provisioning type into vmware_content_deploy_ovf_template.
       - add vmware_content_deploy_ovf_template module for creating VMs from OVF templates
       - new code module for new feature for operations of VCenter infra profile config.
@@ -121,7 +121,7 @@ releases:
       - vmware_guest_disk - Add `filename` option which allows to create a disk from
         an existing VMDK.
       - vmware_guest_disk - add support for setting the sharing/multi-writer mode
-        of virtual disks (https://github.com/ansible-collections/vmware/issues/212)
+        of virtual disks (https://github.com/ansible-collections/community.vmware/issues/212)
       - vmware_guest_network - network adapters can be configured without lists
       - vmware_guest_network - network_info returns a list of dictionaries for ease
         of use
@@ -129,7 +129,7 @@ releases:
       - vmware_guest_tools_wait now exposes a ``timeout`` parameter that allow the
         user to adjust the timeout (second).
       - vmware_host_active_directory - Fail when there are unrecoverable problems
-        with AD membership instead of reporting a change that doesn't take place (https://github.com/ansible-collections/vmware/issues/59).
+        with AD membership instead of reporting a change that doesn't take place (https://github.com/ansible-collections/community.vmware/issues/59).
       - vmware_host_dns - New module replacing vmware_dns_config with increased functionality.
       - vmware_host_dns can now set the following empty values, ``domain``, ``search_domains``
         and ``dns_servers``.
@@ -263,13 +263,13 @@ releases:
         removed; use the suboptions ``ip_address`` and ``subnet_mask`` of the ``network``
         option instead.
       bugfixes:
-      - vmware_content_deploy_ovf_template - use datastore_id in deployment_spec (https://github.com/ansible-collections/vmware/pull/287).
+      - vmware_content_deploy_ovf_template - use datastore_id in deployment_spec (https://github.com/ansible-collections/community.vmware/pull/287).
       - vmware_dvs_portgroup_find - Fix comparison between str and int on method vlan_match
-        (https://github.com/ansible-collections/vmware/pull/52).
+        (https://github.com/ansible-collections/community.vmware/pull/52).
       - vmware_guest - cdrom.controller_number, cdrom.unit_number are handled as integer.
-        (https://github.com/ansible-collections/vmware/issues/274).
+        (https://github.com/ansible-collections/community.vmware/issues/274).
       - vmware_vm_inventory - CustomFieldManager is not present in ESXi, handle this
-        condition (https://github.com/ansible-collections/vmware/issues/269).
+        condition (https://github.com/ansible-collections/community.vmware/issues/269).
       deprecated_features:
       - The vmware_dns_config module has been deprecated and will be removed in a
         later release; use vmware_host_dns instead.
@@ -286,11 +286,11 @@ releases:
         the getting of clusters resource summary information.
       - vmware_content_deploy_ovf_template - handle exception while deploying VM using
         OVF template.
-      - vmware_content_deploy_template - handle exception while deploying VM (https://github.com/ansible-collections/vmware/issues/182).
+      - vmware_content_deploy_template - handle exception while deploying VM (https://github.com/ansible-collections/community.vmware/issues/182).
       - vmware_dvs_portgroup - Added support for distributed port group with private
         VLAN.
       - vmware_guest_snapshot_info - Document that `folder` is required if the VM
-        `name` is defined (https://github.com/ansible-collections/vmware/issues/243)
+        `name` is defined (https://github.com/ansible-collections/community.vmware/issues/243)
       - vmware_host_iscsi - a new module for the ESXi hosts that is dedicated to the
         management of the iSCSI configuration
       - vmware_migrate_vmk - allow migration from a VMware vSphere Distrubuted Switch
@@ -322,22 +322,22 @@ releases:
       bugfixes:
       - vmware_content_deploy_ovf_template - fixed issue where wrong resource pool
         identifier was returned when same resource pool name was used across clusters
-        in the same datacenter (https://github.com/ansible-collections/vmware/pull/363)
+        in the same datacenter (https://github.com/ansible-collections/community.vmware/pull/363)
       - vmware_vmkernel - fixed issue where Repl and ReplNFC services were not being
-        identified as enabled on a vmk interface (https://github.com/ansible-collections/vmware/issues/362).
+        identified as enabled on a vmk interface (https://github.com/ansible-collections/community.vmware/issues/362).
       deprecated_features:
       - vmware_guest - deprecate specifying CDROM configuration as a dict, instead
         use a list.
       minor_changes:
       - vmware_cluster_ha - treat truthy advanced options ('true', 'false') as strings
-        instead of booleans (https://github.com/ansible-collections/vmware/issues/286).
-      - vmware_cluster_vsan - implement advanced VSAN options (https://github.com/ansible-collections/vmware/issues/260).
+        instead of booleans (https://github.com/ansible-collections/community.vmware/issues/286).
+      - vmware_cluster_vsan - implement advanced VSAN options (https://github.com/ansible-collections/community.vmware/issues/260).
       - vmware_cluster_vsan - requires the vSAN Management SDK, which needs to be
         downloaded from VMware and installed manually.
       - vmware_content_deploy_ovf_template - requires the resource_pool parameter.
-      - vmware_guest_disk - add backing_uuid value to return (https://github.com/ansible-collections/vmware/pull/348).
+      - vmware_guest_disk - add backing_uuid value to return (https://github.com/ansible-collections/community.vmware/pull/348).
       - vmware_guest_serial_port - ensure we can run the module two times in a row
-        without unexpected side effect(https://github.com/ansible-collections/vmware/pull/358).
+        without unexpected side effect(https://github.com/ansible-collections/community.vmware/pull/358).
     fragments:
     - 163-vmware_content_deploy_ovf_template.py.yml
     - 260-vmware_cluster_vsan.yml
