--- a/changelogs/fragments/368-vmware_guest_customization_info.yml
+++ b/changelogs/fragments/368-vmware_guest_customization_info.yml
@@ -1,2 +1,2 @@
 minor_changes:
-  - vmware_guest_customization_info - Fixed to get values properly for LinuxPrep and SysPrep parameters(https://github.com/ansible-collections/vmware/pull/368)
+  - vmware_guest_customization_info - Fixed to get values properly for LinuxPrep and SysPrep parameters(https://github.com/ansible-collections/community.vmware/pull/368)
