--- a/changelogs/fragments/380-vmware-handle-special-characters.yml
+++ b/changelogs/fragments/380-vmware-handle-special-characters.yml
@@ -1,2 +1,2 @@
 bugfixes:
-  - "``module_utils/vmware.py`` handles an object name using special characters that URL-decoded(https://github.com/ansible-collections/vmware/pull/380)."
+  - "``module_utils/vmware.py`` handles an object name using special characters that URL-decoded(https://github.com/ansible-collections/community.vmware/pull/380)."
