--- a/tests/integration/targets/vmware_guest/tasks/network_with_dvpg.yml
+++ b/tests/integration/targets/vmware_guest/tasks/network_with_dvpg.yml
@@ -138,7 +138,7 @@
 
     - name: Integration test for issue 457(https://github.com/ansible-collections/community.vmware/issues/457)
       block:
-        - name: Create a new dvportgroup with '/' in the name
+        - name: Create a new dvportgroup with / in the name
           vmware_dvs_portgroup:
             hostname: "{{ vcenter_hostname }}"
             username: "{{ vcenter_username }}"
@@ -156,7 +156,7 @@
             that:
               - create_dvportgroup_result.changed is sameas true
 
-        - name: Deploy VM with '/' in the portgroup name
+        - name: Deploy VM with / in the portgroup name
           vmware_guest:
             hostname: "{{ vcenter_hostname }}"
             username: "{{ vcenter_username }}"
@@ -183,7 +183,7 @@
             that:
               - deploy_vm_slash_result.changed is sameas true
 
-        - name: Delete the dvportgroup with ‘/‘ in the name
+        - name: Delete the dvportgroup with / in the name
           vmware_dvs_portgroup:
             hostname: "{{ vcenter_hostname }}"
             username: "{{ vcenter_username }}"
